# workout-tracker

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py
backend/app/api/: deps.py  routes_analytics.py  routes_auth.py  routes_exercises.py  routes_users.py  routes_voice.py  routes_workouts.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  exercise.py  user.py  workout.py
backend/app/schemas/: auth.py  exercise.py  user.py  workout.py
backend/app/services/: mailer.py  stats.py  summarize.py
backend/app/tasks/: scheduler.py
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AppShell.tsx  VoiceCapture.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/lib/: api.ts  theme.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  History.tsx  Login.tsx  NewWorkout.tsx  WorkoutDetail.tsx
